--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myread",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/tungphan311/MyRead.git",
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
+  }
 }
